Update bootstrap to 3.1.11